--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser-dynamic": "^18.2.0",
     "@angular/router": "^18.2.0",
     "@fortawesome/fontawesome-free": "^6.6.0",
+    "@swimlane/ngx-datatable": "^20.1.0",
     "angular-datatables": "^18.0.0",
     "bootstrap": "^5.3.3",
     "datatables.net": "^2.0.3",
