--- a/angular.json
+++ b/angular.json
@@ -55,7 +55,8 @@
               "src/styles.css",
               "node_modules/bootstrap/dist/css/bootstrap.min.css",
               "node_modules/@fortawesome/fontawesome-free/css/all.min.css",
-              "node_modules/datatables.net-dt/css/dataTables.dataTables.min.css"
+              "node_modules/datatables.net-dt/css/dataTables.dataTables.min.css",
+              "node_modules/ngx-toastr/toastr.css"
             ],
             "scripts": [
               "node_modules/jquery/dist/jquery.min.js",
