--- a/package.json
+++ b/package.json
@@ -19,12 +19,12 @@
     "@angular/platform-browser-dynamic": "^18.2.0",
     "@angular/router": "^18.2.0",
     "@fortawesome/fontawesome-free": "^6.6.0",
-    "@swimlane/ngx-datatable": "^20.1.0",
     "angular-datatables": "^18.0.0",
     "bootstrap": "^5.3.3",
     "datatables.net": "^2.0.3",
     "datatables.net-dt": "^2.0.3",
     "jquery": "^3.6.0",
+    "ngx-toastr": "^19.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.10"
